tests/rosetta/transpiler/OCaml/extend-your-language.error
exit status 2
File "/workspace/mochi/tests/rosetta/transpiler/OCaml/extend-your-language.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: "Extend-your-language" is not a valid module name.
File "/workspace/mochi/tests/rosetta/transpiler/OCaml/extend-your-language.ml", line 85, characters 47-49:
85 |   let t = ref (if2 ((!a = 1)) ((!b = 3)) ((fun ->
                                                    ^^
Error: Syntax error
